--- a/src/app.html
+++ b/src/app.html
@@ -2,7 +2,8 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="manifest" href="%sveltekit.assets%/manifest.json" />
+		<!--link rel="manifest" href="%sveltekit.assets%/manifest.json" /-->
+		<link rel="manifest" href="/manifest.json">
 		<title>A08</title>
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
