--- a/src/app.html
+++ b/src/app.html
@@ -1,15 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="manifest" href="%sveltekit.assets%/manifest.json" />
-		<title>A08</title>
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<link rel="icon" href="%sveltekit.assets%/icon.svg" />
-		<meta name="viewport" content="width=device-width" />
+		<title>A08</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">%sveltekit.body%</div>
-	</body>
 </html>
